[tool.poetry]
name = "hackai-230684"
version = "0.1.0"
description = ""
authors = ["compcor <labnexworld@gmail.com>"]
readme = "README.md"
packages = [{include = "hackai_230684"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
